settting up production db

--- a/.env.dev
+++ b/.env.dev
@@ -11,3 +11,7 @@ MONGO_DB_USERNAME=root
 MONGO_DB_PASSWORD=mongoadmin
 MONGO_DB_AUTHSOURCE=admin
 MONGO_DB_AUTHMECH=SCRAM-SHA-1
+
+
+# MONGLO ATLAS
+MONGODB_URL = mongodb+srv://root:root@cluster0.ql5xw0u.mongodb.net/?retryWrites=true&w=majority
