--- a/.env.dev
+++ b/.env.dev
@@ -2,7 +2,7 @@ DEBUG=1
 
 SECRET_KEY=django-insecure-q=vgi%je874%ggn=qd)13siuk*_*ex4n7g_z7h=hf2rmlrr^ot
 
-
+# DOCKER MONGO
 MONGO_DB_CONFI =  1
 MONGO_DB_NAME=student
 MONGO_DB_HOST=mongodb://mongodb:27017
@@ -12,6 +12,4 @@ MONGO_DB_PASSWORD=mongoadmin
 MONGO_DB_AUTHSOURCE=admin
 MONGO_DB_AUTHMECH=SCRAM-SHA-1
 
-
 # MONGLO ATLAS
-MONGODB_URL = mongodb+srv://root:root@cluster0.ql5xw0u.mongodb.net/?retryWrites=true&w=majority
