--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,7 @@
 DEBUG=1
 
+ALLOWED_HOSTS=https://nutfa.up.railway.app/, https://nutfa.up.railway.app, https://nutfa.onrender.com, .vercel.app, .now.sh
+
 SECRET_KEY=django-insecure-q=vgi%je874%ggn=qd)13siuk*_*ex4n7g_z7h=hf2rmlrr^ot
 
 # DOCKER MONGO
