--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 DEBUG=1
 
-ALLOWED_HOSTS=https://nutfa.up.railway.app/, https://nutfa.up.railway.app, https://nutfa.onrender.com, .vercel.app, .now.sh
+ALLOWED_HOSTS=.onrender.com,
 
 SECRET_KEY=django-insecure-q=vgi%je874%ggn=qd)13siuk*_*ex4n7g_z7h=hf2rmlrr^ot
 
