--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 asgiref==3.7.2
+certifi==2023.7.22
+dj-database-url==2.1.0
 Django==4.1.12
+django-heroku==0.3.1
 djongo==1.3.6
 dnspython==2.4.2
-gunicorn
-pymongo==3.12.3
+psycopg2==2.9.9
+pymongo==4.5.0
 python-decouple==3.8
 pytz==2023.3.post1
 sqlparse==0.2.4
+typing_extensions==4.8.0
 tzdata==2023.3
+whitenoise==6.6.0
