--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ Django==4.1.12
 django-heroku==0.3.1
 djongo==1.3.6
 dnspython==2.4.2
+gunicorn==21.2.0
+packaging==23.2
 psycopg2==2.9.9
 pymongo==4.5.0
 python-decouple==3.8
