--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 DEBUG=1
 
-ALLOWED_HOSTS=.onrender.com,
+ALLOWED_HOSTS=localhost, 127.0.0.1
 
 SECRET_KEY=django-insecure-q=vgi%je874%ggn=qd)13siuk*_*ex4n7g_z7h=hf2rmlrr^ot
 
@@ -14,4 +14,4 @@ MONGO_DB_PASSWORD=mongoadmin
 MONGO_DB_AUTHSOURCE=admin
 MONGO_DB_AUTHMECH=SCRAM-SHA-1
 
-# MONGLO ATLAS
+# MONGLO ATLAS DB URL
