--- a/.env.dev
+++ b/.env.dev
@@ -5,7 +5,7 @@ ALLOWED_HOSTS=localhost, 127.0.0.1
 SECRET_KEY=django-insecure-q=vgi%je874%ggn=qd)13siuk*_*ex4n7g_z7h=hf2rmlrr^ot
 
 # DOCKER MONGO
-MONGO_DB_CONFI =  1
+MONGO_DB_CONFIG =  1
 MONGO_DB_NAME=student
 MONGO_DB_HOST=mongodb://mongodb:27017
 MONGO_DB_HOST=mongodb://root:mongoadmin@mongodb:27017
@@ -14,4 +14,4 @@ MONGO_DB_PASSWORD=mongoadmin
 MONGO_DB_AUTHSOURCE=admin
 MONGO_DB_AUTHMECH=SCRAM-SHA-1
 
-# MONGLO ATLAS DB URL
+# MONGLO ATLAS DB URL here
