--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.9'
 
-services:
+services:      
   web:
     build: .
-    command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py loaddata db.json && python manage.py runserver 0.0.0.0:8000"
+    command: bash -c "python manage.py makemigrations && python manage.py migrate --fake-initial && python manage.py runserver 0.0.0.0:8000"
     container_name: ft9ja
     volumes:
       - .:/ft9ja
@@ -11,8 +11,37 @@ services:
       - 8000:8000
     env_file:
       - ./.env.dev
-
     depends_on:
       - mongodb
+      - pgdb
     links:
       - mongodb
+      - pgdb
+
+  mongodb:
+    image: mongo:latest
+    restart: always
+    volumes:
+      - init-db:/docker-entrypoint-initdb.d
+      - data-db:/data/db
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: mongoadmin
+      MONGO_INITDB_DATABASE: student
+    ports:
+      - 27017:27017
+
+  pgdb:
+    image: postgres:16
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_DB=mydatabase
+      - POSTGRES_USER=myuser
+      - POSTGRES_PASSWORD=mypassword
+
+volumes:
+  init-db:
+  data-db:
+  postgres_data:
+
