change in the graphs dynamic

--- a/.env.dev
+++ b/.env.dev
@@ -14,4 +14,5 @@ MONGO_DB_PASSWORD=mongoadmin
 MONGO_DB_AUTHSOURCE=admin
 MONGO_DB_AUTHMECH=SCRAM-SHA-1
 
-# MONGLO ATLAS DB URL here
+# MONGLO ATLAS DB URL
+
